@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-05-11T08:13:36Z",
-  "count" : 3,
-  "count_minmax" : [ 3, 3 ],
+  "timestamp" : "2022-05-12T00:51:10Z",
+  "count" : 60,
+  "count_minmax" : [ 3, 60 ],
   "count_prev_day_inc" : 3,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
