@@ -1,5 +1,5 @@
 {
-  "count": 222,
+  "count": 279,
   "uniques": 1,
   "views": [
     {
@@ -49,7 +49,7 @@
     },
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 3,
+      "count": 60,
       "uniques": 1
     }
   ]
