@@ -1,3 +1,9 @@
+2022-05-12T00:51:10Z:
+* notice: last 14d: all unq: 279 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 8 2 / 230 12
+* notice: next accum: outdated-all outdated-unq / all unq: 8 2 / 287 12
+* notice: prev json diff / prev day diff: unq all: +0 +57 -0 -0 / +0 +57 -0 -0
+
 2022-05-11T08:13:36Z:
 * notice: last 14d: all unq: 222 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 8 2 / 227 11
